# youtube-translator-pro

./: .gitignore  README.md  add_missing_imports.py  advanced_features.py  application_manager.py  audio_utils.py  batch.py  cache.py  complete_integrity_test.py  debug_import.py  enhanced_integrity_test.py  fix_integrity_test.py  fix_pyqt_imports.py  fix_remaining_annotations.py  fix_string_literals.py  fix_styles.py  fix_syntax_errors.py  fix_type_annotations.py  fix_ui_module.py  integrity_test.py  main.py  pyproject.toml  requirements.txt  settings.py  simple_app_test.py  srt_export.py  styles.py  test_app_detail.py  test_app_manager.py  test_components.py  test_detailed.py  test_imports.py  transcribe.py  translate.py  ui.py
.github/workflows/: advanced_ci.yml  ci.yml
backup_cleanup/: add_missing_imports.py  batch.py.orig  complete_integrity_test.py  debug_import.py  enhanced_integrity_test.py  fix_integrity_test.py  fix_pyqt_imports.py  fix_remaining_annotations.py  fix_string_literals.py  fix_styles.py  fix_syntax_errors.py  fix_type_annotations.py  fix_ui_module.py  integrity_test.py  integrity_test_report.html  simple_app_test.py  test_app_detail.py  test_app_manager.py  test_components.py  test_detailed.py  test_imports.py
data/localization/: ar.json  de.json  en.json  es.json  fr.json
docs/: developer_guide.md  user_guide.md
localization/: en.json
src/: __init__.py  __main__.py  config.py
src/core/: __init__.py  application_manager.py  batch_processor.py  batch_processor_stop.py  cache_manager.py  error_handler.py  fixed_cache_manager.py  pipeline.py  session_manager.py
src/services/: __init__.py  transcription_service.py  translation_service.py
src/ui/: __init__.py  batch_status_widget.py  control_panel_widget.py  dialogs.py  fixed_styles.py  integration_components.py  keyboard_shortcuts.py  language_selector.py  main_window.py  performance_monitor_widget.py  rtl_support.py  settings_dialog.py  styles.py  task_list_widget.py  telemetry_consent_dialog.py  url_input_widget.py
src/utils/: __init__.py  cache_manager.py  error_handling.py  export_utils.py  fixed_localization.py  lazy_loader.py  localization.py  performance_monitor.py  recent_files.py  telemetry.py  thread_pool.py  (+2 more)
tests/: __init__.py  conftest.py  test_cache_manager.py  test_youtube_utils.py
(+2 files in other folders)
