[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-translator-pro"
version = "1.0.0"
description = "Professional application for transcribing and translating YouTube videos"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "YouTube Translator Pro Team", email = "info@youtubetranslatorpro.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-Qt6>=6.4.0", 
    "PyQt6-sip>=13.4.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.23.0",
    "torch>=2.0.0",
    "openai-whisper>=20230314",
    "pytube>=12.1.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.249",
]
build = [
    "PyInstaller>=5.7.0",
    "setuptools>=61.0.0",
    "wheel>=0.38.0",
]

[project.urls]
"Homepage" = "https://github.com/youtube-translator-pro/youtube-translator-pro"
"Bug Tracker" = "https://github.com/youtube-translator-pro/youtube-translator-pro/issues"

[project.gui-scripts]
youtube-translator-pro = "src.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
